# cudaLearning

./: .gitignore  CMakeLists.txt  main.cpp
kernels/: CMakeLists.txt
kernels/test_1/: test.cu
kernels/test_2/: test.cu  test.cuh
kernels/test_3/: test.cu
tools/: format.py
